force-app/main/default/objects/Data_Collection_Type_Information__c/Data_Collection_Type_Information__c.object-meta.xml
<CustomObject>
    <description>Data Management Data Collection Type</description>
    <label>Data Collection Type</label>
    <nameField>
        <label>Data Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Collection Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>