force-app/main/default/objects/Data_Collection_Type_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Data Collection Types</relationshipLabel>
    <relationshipName>Data_Collection_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>