force-app/main/default/objects/Data_Collection_Type_Information__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <formula>Contact_Name__r.Phone +&quot; &quot;+ Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>