force-app/main/default/objects/Data_Collection_Type_Information__c/fields/Data_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Collection_Type__c</fullName>
    <label>Data Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>ASSESSOR_DEED</fullName>
            </value>
            <value>
                <fullName>AUX</fullName>
            </value>
            <value>
                <fullName>BOARD_ASSOC</fullName>
            </value>
            <value>
                <fullName>CAMA</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>CORE_FINAL</fullName>
            </value>
            <value>
                <fullName>CORE_PRELIM</fullName>
            </value>
            <value>
                <fullName>DEED</fullName>
            </value>
            <value>
                <fullName>GIS_MAPS</fullName>
            </value>
            <value>
                <fullName>HISTORICAL_DIST</fullName>
            </value>
            <value>
                <fullName>ISSUES</fullName>
            </value>
            <value>
                <fullName>MORTGAGE</fullName>
            </value>
            <value>
                <fullName>TAX_RATES</fullName>
            </value>
            <value>
                <fullName>ZONING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>